<resources>
    <string name="app_name">AquaMinder</string>
    <string name="fragment_login_btn_login">Ingresar</string>
    <string name="fragment_login_text_register">¿No tenés una cuenta?</string>
    <string name="fragment_login_btn_register">Registrate</string>
    <string name="fragment_login_btn_forgot_password">Olvidé mi clave</string>
    <string name="fragment_login_btn_keep_values">Guardar usuario y clave</string>
    <string name="fragment_login_title">Aqua Minder</string>
    <string name="fragment_login_name_ask">Usuario</string>
    <string name="fragment_login_password_ask">Clave</string>
    <string name="notifications_on">Notificaciones Activadas!</string>
    <string name="notifications_off">Notificaciones Desactivadas</string>
    <string name="notifications_ask_title">Necesitamos enviarte notificaciones</string>
    <string name="notifications_ask_message">Esto te permitira obtener informacion respecto a tu dispositivo cuando no estes en la App.</string>
    <string name="notifications_accept">OK</string>
    <string name="notifications_reject">No, gracias</string>
    <string name="fragment_new_user_btn_register">Nueva Cuenta</string>
    <string name="fragment_new_user_name_ask">Nombre de Usuario</string>
    <string name="fragment_new_user_mail_ask">Correo electrónico</string>
    <string name="fragment_new_user_password_ask">Clave</string>
    <string name="fragment_new_user_password_info">Clave numérica entre 4 y 8 dígitos</string>
    <string name="fragment_new_user_btn_save">Registrar</string>
    <string name="fragment_new_user_text_login">¿Ya tenés una cuenta?</string>
    <string name="fragment_new_user_btn_login">Ingresar</string>
    <string name="fragment_irrigation_zones_title">Zonas de Riego</string>
    <string name="fragment_irrigation_zones_subtitle">Seleccione la zona de riego</string>
    <string name="fragment_irrigation_zones_subtitle_b">Agregue una nueva zona de riego</string>
    <string name="fragment_irrigation_zones_item_name">Nombre:</string>
    <string name="fragment_irrigation_zones_item_id">ID:</string>
    <string name="fragment_irrigation_zones_item_id_b">%s</string>
    <string name="fragment_irrigation_zones_share_id_label">Compartir ID</string>
    <string name="fragment_irrigation_zones_share_id_error">No pudimos encontrar el ID</string>
    <string name="fragment_irrigation_zones_delete_item_position_error">No pudimos elimnar la zona</string>
    <string name="fragment_new_irrigation_zone_title">Nueva Zona de Riego</string>
    <string name="fragment_new_irrigation_zone_subtitle">Cree una nueva zona de riego</string>
    <string name="fragment_new_irrigation_zone_select_id">ID del dispositivo</string>
    <string name="fragment_new_irrigation_zone_select_id_info">El ID del dispositivo se encuentra en la etiqueta</string>
    <string name="fragment_new_irrigation_ask_bt">CONECTAR A RED WIFI</string>
    <string name="fragment_new_irrigation_connected">CONECTADO</string>
    <string name="fragment_new_irrigation_retry">REINTENTAR</string>
    <string name="fragment_new_irrigation_zone_input_id">ID del dispostivo</string>
    <string name="fragment_new_irrigation_zone_copy_message">¡Has pegado el ID!</string>
    <string name="fragment_new_irrigation_zone_copy_message_error">Formato de ID inválido</string>
    <string name="fragment_new_irrigation_zone_address_not_found_error">Dirección no encontrada</string>
    <string name="fragment_new_irrigation_zone_location_not_found_error">No se puede obtener la localización</string>
    <string name="fragment_new_irrigation_zone_select_logo">Logo del dispositivo</string>
    <string name="fragment_new_irrigation_zone_select_name">Nombre del dispositivo</string>
    <string name="fragment_new_irrigation_zone_input_name">Nombre</string>
    <string name="fragment_new_irrigation_zone_input_location">Dirección del dispositivo</string>
    <string name="fragment_new_irrigation_zone_location">Dirección</string>
    <string name="fragment_new_irrigation_zone_success_message">¡Zona de Riego creada con exito!</string>
    <string name="fragment_new_irrigation_zone_btn_verify">VERIFICAR</string>
    <string name="fragment_new_irrigation_zone_btn_save">GUARDAR</string>
    <string name="fragment_home_title">Nombre de la Zona de Riego</string>
    <string name="fragment_home_valve_description">Valvula %1$s</string>
    <string name="fragment_home_valve_status_active">ACTIVADA</string>
    <string name="fragment_home_valve_status_watering">REGANDO</string>
    <string name="fragment_home_valve_status_inactive">DESACTIVADA</string>
    <string name="fragment_home_valve_selected_humidity">Humedad deseada:</string>
    <string name="fragment_home_valve_selected_humidity_value">%1$s %%</string>
    <string name="fragment_home_valve_start_hour">Comienza:</string>
    <string name="fragment_home_valve_start_hour_value">%1$s hs</string>
    <string name="fragment_home_valve_interval_hours">Intervalo:</string>
    <string name="fragment_home_valve_interval_hours_value">%1$s horas</string>
    <string name="fragment_home_valve_duration">Duración:</string>
    <string name="fragment_home_valve_duration_values">%1$s minutos</string>
    <string name="fragment_home_valve_empty_valves_title">No hay válvulas configuradas</string>
    <string name="fragment_home_valve_empty_valves_description">Configura válvulas para poder visualizarlas aquí.</string>
    <string name="fragment_home_last_waters">Ultimos riegos:</string>
    <string name="fragment_home_next_waters">Próximos riegos:</string>
    <string name="fragment_home_last_humidity">Humedad medida:</string>
    <string name="fragment_home_empty_humidity">No hay datos de humedad</string>
    <string name="fragment_home_empty_last">No hay datos de riegos anteriores</string>
    <string name="fragment_home_empty_next">No hay datos de riegos posteriores</string>
    <string name="fragment_configuration_title">Configuración</string>
    <string name="fragment_configuration_general">Configuración general</string>
    <string name="fragment_configuration_individual">Configuración por válvula</string>
    <string name="fragment_configuration_edit">EDITAR</string>
    <string name="fragment_configuration_btn_save">GUARDAR CAMBIOS</string>
    <string name="fragment_configuration_switch_on">ON</string>
    <string name="fragment_configuration_switch_off">OFF</string>
    <string name="fragment_configuration_switch_sensor">Medir Humedad</string>
    <string name="fragment_configuration_switch_weather">Revisar Clima</string>
    <string name="fragment_configuration_switch_active">Activar Válvula</string>
    <string name="fragment_configuration_switch_timer">Activar temporizador</string>
    <string name="fragment_valve_config_title">Valvula %s</string>
    <string name="fragment_valve_config_new_title">Configuración</string>
    <string name="fragment_valve_config_control">Modo de control</string>
    <string name="fragment_valve_config_btn_save">GUARDAR</string>
    <string name="fragment_valve_config_btn_update">ACTUALIZAR</string>
    <string name="fragment_valve_config_scheduled">Programado</string>
    <string name="fragment_valve_config_sensor">Por humedad</string>
    <string name="fragment_valve_config_weather">Considerar clima:</string>
    <string name="fragment_valve_config_frequency">Frecuencia:</string>
    <string name="fragment_valve_config_choose_days">Días de la semana</string>
    <string name="fragment_valve_config_every_n_days">Cada N días</string>
    <string name="fragment_valve_config_days">días</string>
    <string name="fragment_valve_config_l">L</string>
    <string name="fragment_valve_config_m">M</string>
    <string name="fragment_valve_config_x">X</string>
    <string name="fragment_valve_config_j">J</string>
    <string name="fragment_valve_config_v">V</string>
    <string name="fragment_valve_config_s">S</string>
    <string name="fragment_valve_config_d">D</string>
    <string name="fragment_valve_config_all">TODOS</string>
    <string name="fragment_valve_config_time">Horario de riego:</string>
    <string name="fragment_valve_config_duration">Duración del riego:</string>
    <string name="fragment_valve_config_minutes">minutos</string>
    <string name="fragment_valve_config_new_time">Nuevo</string>
    <string name="fragment_valve_config_removed">Horario eliminado %s</string>
    <string name="fragment_valve_config_max_duration">La duración maxima es %s minutos</string>
    <string name="fragment_valve_config_min_duration">La duración minima es %s minuto</string>
    <string name="fragment_valve_config_saved">Se guardo la configuracion</string>
    <string name="fragment_valve_config_days_error">Ingrese un valor entre 1 y 31</string>
    <string name="fragment_valve_config_duration_error">Ingrese un valor entre 1 y 60</string>
    <string name="fragment_weather_title">Clima</string>
    <string name="fragment_weather_humidity_label">Humedad: </string>
    <string name="fragment_weather_next_hours">Pronóstico últimas 24 horas: </string>
    <string name="fragment_weather_rain_label">Probabilidad de Lluvia:</string>
    <string name="fragment_weather_wind_label">Viento</string>
    <string name="error_msg_invalid_password">Clave Incorrecta</string>
    <string name="error_msg_enter_password">Ingrese una clave</string>
    <string name="error_msg_short_password">Clave demasiado corta</string>
    <string name="error_msg_enter_name">Ingrese un nombre</string>
    <string name="error_msg_enter_mail">Ingrese un mail</string>
    <string name="error_msg_format_mail">Ingrese un formato de mail válido</string>
    <string name="error_msg_new_user_name">Ingrese un Nombre de Usuario</string>
    <string name="error_msg_new_user_email">Ingrese un Mail Válido</string>
    <string name="error_msg_new_user_register">Usuario Registrado!</string>
    <string name="error_msg_new_user_not_found">El usuario no se encuentra registrado</string>
    <string name="error_msg_new_user_empty_value">Los datos del usuario están incompletos</string>
    <string name="error_msg_new_user_mail_unavailable">El mail ingresado no está disponible</string>
    <string name="error_msg_new_user_username_unavailable">El nombre de usuario ingresado no está disponible</string>
    <string name="error_msg_new_irrigation_zone_invalid_id">Ingrese un ID válido</string>
    <string name="error_msg_new_irrigation_zone_invalid_name">Ingrese un nombre</string>
    <string name="error_msg_new_irrigation_zone_invalid_address">Ingrese una dirección</string>
    <string name="error_msg_invalid_id_selected">No se encuentra la Zona de Riego seleccionada</string>
    <string name="error_msg_invalid_weather">No hay información del clima en este momento</string>
    <string name="error_msg_save_config">No se puedo guardar la configuracion</string>
    <string name="error_msg_network">Ha ocurrido un problema de conexión</string>
    <string name="error_msg_catch">Ha ocurrido un error: %s</string>
    <string name="error_msg_unknown">¡Ha ocurrido un error!</string>
    <string name="error_msg_ir_empty_list">No tiene niguna Zona de Riego configurada\n\nCree una nueva</string>
    <string name="error_msg_ir_generic">No se encuentran datos de Zona de Riego</string>
    <string name="error_msg_new_iz">No se pudo crear la Zona de Riego</string>
    <string name="success_msg_user_registered">¡Usuario Registrado!</string>
    <string name="success_msg_card_registered">Tarjeta Registrada!</string>
    <string name="success_msg_payment_registered">Pago Registrado!</string>
    <string name="success_msg_login_successful">¡Login Exitoso!</string>
    <string name="error_dialog_accept">ACEPTAR</string>
    <string name="error_dialog_cancel">CANCELAR</string>
    <string name="dialog_logout_title">¿Está seguro que desea cerrar sesión?</string>
    <string name="dialog_modify_humidity_title">Modificar humedad</string>
</resources>